# redtokyo_bot

./: Cargo.toml  README.md
.cargo/: config.toml
src/: config.rs  main.rs
src/bot/: callbacks.rs  keyboards.rs  mod.rs  task.rs
src/bot/enums/: mod.rs  tg_emoji.rs  user_type.rs
src/bot/filters/: antispam.rs  callback.rs  command.rs  get_user.rs  mod.rs  regexes.rs
src/bot/handlers/: bot_welcome.rs  captcha.rs  db_update.rs  duel.rs  garant.rs  mod.rs  ping.rs  scam_base.rs  verbal_warns.rs
src/bot/libs/: iris_api.rs  mod.rs
src/bot/methods/: message.rs
src/bot/middlewares/: antispam.rs  media_group.rs  mod.rs  user_update.rs
src/bot/utils/: chat.rs  datetime.rs  mod.rs  parse.rs  text.rs  trade.rs  user.rs
src/database/: cache.rs  mod.rs
src/database/models/: garant.rs  mod.rs  scam_base.rs  successful_captcha.rs  user.rs  verbal_warns.rs
src/database/repo/: captcha_repo.rs  garant_repo.rs  mod.rs  scam_base.rs  user_repo.rs  verbal_warns_repo.rs
