[package]
name = "RedTokyoSupportBot"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
rpath = false
incremental = false

[lints.clippy]
too_many_arguments = "allow"

[dependencies]
telers = { version = "1.0.0-beta.8", features = ["webhooks-axum", "signal"] }
tokio = { version = "1.53.1", features = ["rt-multi-thread", "macros"] }

sea-orm = { version = "2.0.0", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
moka = { version = "0.12.15", features = ["future"] }

strum = { version = "0.28.0", features = ["derive"] }
chrono = { version = "0.4.45", default-features = false, features = ["std", "clock", "serde"] }
chrono-tz = { version = "0.10.4", default-features = false, features = ["filter-by-regex"] }
uuid = { version = "1.23.4", default-features = false, features = ["v4", "serde"] }
smallvec = { version = "2.0.0-alpha.12"}

dotenvy = "0.15.7"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
axum = "0.8.9"
reqwest = { version = "0.13.4", features = ["query", "json"] }
serde_json = "1.0.151"
rand = "0.10.2"
anyhow = "1.0.103"
thiserror = "2.0.18"
regex = "1.13.1"